--- a/package.json
+++ b/package.json
@@ -4,12 +4,21 @@
   "description": "Il s'agit d'un projet de création d'une plateforme de location de piscines, permettant à ceux qui possèdent les piscines de les louer",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon index"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/VanDerJoys/pool-party"
+    "url": "https://github.com/VanDerJoys/pool-party-project"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.21.0",
+    "moment": "^2.30.1",
+    "mongoose": "^8.6.3",
+    "nodemon": "^3.1.7"
+  }
 }
